--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://elsadbedel.github.io/azza-app-website",
+  "homepage": "http://elsadbedel.github.io/azzaapp-website",
   "name": "azzaapp",
   "version": "0.1.0",
   "private": true,
